--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -16,12 +16,33 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "EeEmQsY76Oqn"
+        "id": "EeEmQsY76Oqn",
+        "outputId": "0a993988-dbc6-422d-f459-9a394e80ffec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Setup complete ✅\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Display settings\n",
+        "pd.set_option('display.max_columns', None)\n",
+        "\n",
+        "print(\"Setup complete ✅\")"
+      ]
     }
   ]
 }
